--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd": "^4.22.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.39.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-virtualized": "^9.22.3",
