--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
+    "rsuite": "^5.22.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -33,6 +36,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "babel-plugin-react-html-attrs": "^3.0.5",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
   },
